src/main/scala/chapter3/output/RunCantSendArray.output
// #output
CantSendArray.scala:5: error: type mismatch;
 found   : Array[Int]
 required: Int
max(numbers) // type mismatch error
    ^
one error found
// #output
